--- a/AndroidResultsApp/Resources/layout/Main.axml
+++ b/AndroidResultsApp/Resources/layout/Main.axml
@@ -32,4 +32,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/textView2" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/ButtonToSendEmail"
+        android:text="@string/buttonEmail" />
+    <EditText
+        android:inputType="textEmailAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/enterEmail"
+        android:text="Email" />
 </LinearLayout>
